fixed css overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1105,6 +1105,7 @@ button {
 .featured-wrapper {
   max-width: 1180px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .featured-title {
