--- a/src/css/_featured.scss
+++ b/src/css/_featured.scss
@@ -12,6 +12,7 @@
 .featured-wrapper {
   max-width: 1180px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .featured-title {
